<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

   <LinearLayout
       android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <TextView
           android:layout_margin="24dp"
           android:textAllCaps="true"
           android:text="@string/overview"
           android:layout_width="match_parent"
           android:layout_height="wrap_content" />

       <LinearLayout
           android:layout_margin="24dp"
           android:orientation="horizontal"
           android:layout_width="match_parent"
           android:layout_height="match_parent">

           <TextView
               android:textStyle="bold"
               android:layout_weight="2"
               android:text="@string/duration_total"
               android:layout_width="0dp"
               android:layout_height="match_parent" />

           <TextView
               android:textStyle="bold"
               android:layout_weight="1"
               android:id="@+id/total"
               android:text="120 Minutes"
               android:layout_width="0dp"
               android:layout_height="match_parent" />

       </LinearLayout>

       <LinearLayout
           android:layout_margin="24dp"
           android:orientation="horizontal"
           android:layout_width="match_parent"
           android:layout_height="match_parent">

           <TextView
               android:layout_weight="2"
               android:text="@string/explain"
               android:layout_width="0dp"
               android:layout_height="match_parent" />

           <TextView
               android:layout_weight="1"
               android:text="3 Minutes"
               android:id="@+id/explain"
               android:layout_width="0dp"
               android:layout_height="match_parent" />

       </LinearLayout>

       <LinearLayout
           android:layout_margin="24dp"
           android:orientation="horizontal"
           android:layout_width="match_parent"
           android:layout_height="match_parent">

           <TextView
               android:layout_weight="2"
               android:text="@string/work"
               android:layout_width="0dp"
               android:layout_height="match_parent" />

           <TextView
               android:layout_weight="1"
               android:text="23 Minutes"
               android:id="@+id/work"
               android:layout_width="0dp"
               android:layout_height="match_parent" />

       </LinearLayout>

       <LinearLayout
           android:layout_margin="24dp"
           android:orientation="horizontal"
           android:layout_width="match_parent"
           android:layout_height="match_parent">

           <TextView
               android:layout_weight="2"
               android:text="@string/water"
               android:layout_width="0dp"
               android:layout_height="match_parent" />

           <TextView
               android:layout_weight="1"
               android:text="43 Minutes"
               android:id="@+id/water"
               android:layout_width="0dp"
               android:layout_height="match_parent" />

       </LinearLayout>

   </LinearLayout>


    <Button
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/done"
        android:background="@color/colorAccent"
        android:text="@string/done"/>

</LinearLayout>